# ligo.at

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  gunicorn.conf.py  pyproject.toml  requirements.txt
etc/: Caddyfile  generate_secrets.py  ligoat.service  ligoatingestor.service
ingestor/: __main__.py
src/: auth.py  config.py  config.sql  db.py  ingest.py  keyval.sql  main.py  oauth.py  schema.sql  security.py  types.py
src/atproto/: __init__.py  atproto_identity.py  atproto_oauth.py  kv.py  oauth.py  types.py  validator.py
src/atproto2/: __init__.py  atproto_oauth.py  atproto_security.py
src/static/: actor-typeahead.js  editor.css  inter.css  style.css  worksans.css
src/static/profile/: default.css
src/templates/: _editor_links.html  _editor_profile.html  _footerlinks.html  _htmx_indicator.html  editor.html  error.html  index.html  login.html  profile.html  terms.html
