[project]
name = "ligo-at"
version = "0.0.1"
description = "Decentralized links page on top of AT Protocol"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiodns>=3.5.0",
    "aiohttp>=3.13.0",
    "atproto_jetstream>=0.2.0",
    "authlib>=1.3",
    "flask-htmx>=0.4.0",
    "flask[async,dotenv]>=3.1.2",
    "gunicorn>=23.0.0",
]
