[project]
name = "ligo-at"
version = "0.0.1"
description = "Decentralized links page on top of AT Protocol"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiodns>=4.0.0",
    "aiohttp>=3.13.3",
    "authlib>=1.6.7",
    "flask-htmx>=0.4.0",
    "flask[async,dotenv]>=3.1.2",
    "gunicorn>=25.0.3",
    "ingestor==0.0.0",
]

[tool.uv.sources]
ingestor = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
